hphp/hack/test/typecheck/expression_trees/await_in_splice_et_lambda.php.exp
ERROR: File "await_in_splice_et_lambda.php", line 11, characters 20-42:
`await` cannot be used as an expression in this location because it's conditionally executed. (Parsing[1002])
